--- a/core/views/core-component-type/image.ejs
+++ b/core/views/core-component-type/image.ejs
@@ -8,7 +8,7 @@ const validatedOptions = options || '';
 
     <!-- show media popup button -->
     <div data-selected-medias></div>
-    <button data-param-value data-load-media type="button" data-custom-toggle="<%= id %>" class="button-style">+
+    <button data-param-value data-load-media type="button" data-custom-toggle="<%= id ;%>" class="btn_transparent">+
     </button>
 
     <% if (description) { %>
