--- a/core/views/custom-type/posts/index.ejs
+++ b/core/views/custom-type/posts/index.ejs
@@ -13,7 +13,7 @@ const modifyDate = (publishTime) => {
 <div class="posts-content">
     <div class="posts-content__heading fl-center-v" style="gap:10px">
         <h1><%= title; %></h1>
-        <a href="?post_type=post&action=add" class="button-style">Add New</a>
+        <a href="?post_type=post&action=add" class="btn_transparent">Add New</a>
     </div>
 </div>
 
