--- a/core/views/custom-type/media/index.ejs
+++ b/core/views/custom-type/media/index.ejs
@@ -11,7 +11,7 @@
         <div data-form-group>
             <div data-form-input>
                 <label for="name">Name:</label>
-                <input id="name" type="text" name="name">
+                <input id="name" type="text" name="name" placeholder="Name">
             </div>
             <div data-form-description>Optional, we can get the name of the media.</div>
         </div>
