--- a/core/assets/styles/utils/variables.scss
+++ b/core/assets/styles/utils/variables.scss
@@ -11,6 +11,8 @@
   --permalink-color: var(--color-secondary);
   --permalink-color-hover: var(--color-primary);
 
+  --placeholder-color: #adb5bd;
+
   /* Header */
   --header-height: 46px;
 
