--- a/core/views/core-component-type/image.ejs
+++ b/core/views/core-component-type/image.ejs
@@ -3,16 +3,16 @@ const id = (new Date()).getTime().toString(36) + Math.random().toString(36).slic
 const validatedOptions = options || '';
 %>
 
-<div data-type="<%= type %>" data-param="<%= paramName; %>" class="<%= classesName; %>" data-id="<%= id %>"
+<div data-type="<%= type; %>" data-param="<%= paramName; %>" class="<%= classesName; %>" data-id="<%= id %>"
      data-options="<%= validatedOptions %>">
 
     <!-- show media popup button -->
     <div data-selected-medias></div>
-    <button data-param-value data-load-media type="button" data-custom-toggle="<%= id ;%>" class="btn_transparent">+
+    <button data-param-value data-load-media type="button" data-custom-toggle="<%= id; %>" class="btn_transparent">+
     </button>
 
     <% if (description) { %>
-        <div class="description"><%= description ;%></div>
+        <div class="description"><%= description; %></div>
     <% } %>
 
     <!-- media popup -->
@@ -21,35 +21,52 @@ const validatedOptions = options || '';
             <div data-popup-overlay data-custom-toggle="<%= id %>"></div>
 
             <!-- popup content -->
-            <div class="media-popup fl-grid" data-popup-inner>
+            <div data-popup-inner>
 
-                <!-- media list -->
-                <div class="media-popup__col--left">
-                    <div data-media-list class="flex-grid-template"></div>
+                <div class="media-popup fl-grid">
 
-                    <div>
-                        <button type="button" data-save-media data-custom-toggle="<%= id %>">Save</button>
+                    <!-- media list -->
+                    <div class="media-popup__col media-popup__col--left">
+                        <div data-custom-title>
+                            <span>Media List</span>
+                        </div>
+
+                        <div data-media-list class="fl-grid"></div>
+
+                        <button type="button" class="btn_primary" data-save-media data-custom-toggle="<%= id %>">Save
+                        </button>
+                    </div>
+
+                    <!-- upload new media -->
+                    <div class="media-popup__col media-popup__col--right">
+                        <form data-media-form action="?post_type=media&method=post&action=add"
+                              enctype="multipart/form-data">
+
+                            <div data-custom-title>
+                                <span>Upload Media</span>
+                            </div>
+
+                            <div data-form-group>
+                                <div data-form-input>
+                                    <label for="name">Name:</label>
+                                    <input id="name" type="text" name="name" placeholder="Name" data-media-name>
+                                </div>
+                                <div data-form-description>Optional, we can get the name of the media.</div>
+                            </div>
+
+                            <div data-form-group>
+                                <div data-form-input>
+                                    <label for="image">Upload Image:</label>
+                                    <input type="file" name="image" accept="image/*" id="image" required data-add-media
+                                           required>
+                                </div>
+                            </div>
+
+                            <button class="btn_transparent" type="submit" data-add-media-button>Add New</button>
+                        </form>
                     </div>
                 </div>
 
-                <!-- upload new media -->
-                <div class="media-popup__col--right">
-                    <form data-media-form class="media-popup fl-grid" action="?post_type=media&method=post&action=add"
-                          enctype="multipart/form-data">
-
-                        <div>
-                            <label for="name">Name:</label>
-                            <input type="text" id="name" placeholder="Name" data-media-name>
-                        </div>
-
-                        <div>
-                            <label for="image">Add new image:</label>
-                            <input id="image" type="file" accept="image/*" name="image" data-add-media required>
-                        </div>
-
-                        <button data-add-media-button>Add</button>
-                    </form>
-                </div>
             </div>
 
         </div>
