--- a/core/views/custom-type/posts/detail.ejs
+++ b/core/views/custom-type/posts/detail.ejs
@@ -100,7 +100,7 @@ const getValueFromData = (name, property = '') => {
                                             data-pb-component-popup-save>
                                         Save
                                     </button>
-                                    <button type="button" data-toggle="component-panel" class="btn_primary"
+                                    <button type="button" data-toggle="component-panel" class="btn_transparent"
                                             data-pb-component-popup-cancel>
                                         Cancel
                                     </button>
