feat(user): change ui user popup

--- a/core/assets/styles/base/form.scss
+++ b/core/assets/styles/base/form.scss
@@ -49,6 +49,11 @@ input[type="file"] {
   }
 }
 
+// form column
+[data-form-column]{
+  display: flex;
+  gap: 5px;
+}
 // form group
 [data-form-group] {
 
