--- a/core/assets/styles/components/popup.scss
+++ b/core/assets/styles/components/popup.scss
@@ -39,6 +39,11 @@
   content: "";
 }
 
+// user popup
+[data-user-popup] {
+  flex-direction: column;
+}
+
 // popup content
 [data-popup-inner] {
   display: flex;
